--- a/app/views/item_templates/list.html.erb
+++ b/app/views/item_templates/list.html.erb
@@ -1,7 +1,9 @@
+<h1>Howdy!</h1>
+
 <% Item.all.each do |the_item| %>
   <div>
     <a href="<%= the_item.link_url %>">
-      Click me!
+      <%= the_item.link_description %>
     </a>
   </div>
 <% end %>
